--- a/main.html
+++ b/main.html
@@ -4,42 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PREZART</title>
+    <title>PRESART</title>
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="main.css">
+    <link rel='stylesheet' href="slider.css">
 </head>
 <body>
 
-
-    <!--<div class="header">-->
-        <!--<nav class="navbar navbar-default">-->
-            <!--<div class="container-fluid">-->
-                <!--&lt;!&ndash; Brand and toggle get grouped for better mobile display &ndash;&gt;-->
-                <!--<div class="navbar-header">-->
-                    <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">-->
-                        <!--<span class="sr-only">Toggle navigation</span>-->
-                        <!--<span class="icon-bar"></span>-->
-                        <!--<span class="icon-bar"></span>-->
-                        <!--<span class="icon-bar"></span>-->
-                    <!--</button>-->
-                    <!--<a class="navbar-brand" href="#">PrezArt</a>-->
-                <!--</div>-->
-
-                <!--&lt;!&ndash; Collect the nav links, forms, and other content for toggling &ndash;&gt;-->
-                <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">-->
-
-                    <!--<ul class="nav navbar-nav navbar-right">-->
-                        <!--<li><a href="#abt">О нас</a></li>-->
-                        <!--<li><a href="#wrk">Наши Работы</a></li>-->
-                        <!--<li><a href="#zkz">Заказ</a></li>-->
-                    <!--</ul>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</nav>-->
-    <!--</div>-->
-
     <div class="header">
-        <div class="logo">PrezArt</div>
+        <div class="logo">PresArt</div>
         <div class="links">
         <ul>
             <li><a href="#abt">о нас</a></li>
@@ -51,7 +24,7 @@
 
     <div class="parallax banner" data-parallax="scroll" data-image-src="images/par-1.jpg">
         <img src="images/logo.png" height="350px">
-        <p>PREZ<br>ART</p>
+        <p>PRES<br>ART</p>
     </div>
 
     <div class="hallo" id="abt">
@@ -60,17 +33,39 @@
             Мы разложим вашу информацию на составляющие, проанализируем,  а затем представим в виде презентации или инфографики.
             ​</p>
         <button>Заказать решение</button>
-        <ul>
-            <li><h3>Презентации для чтения и выступлений</h3>
-                <p>Пригодятся для онлайн-продаж, рассылок, встреч с клиентами и партнерами, отчетов и выступлений на конференциях</p></li>
-            <li><h3>Корпоративные шаблоны</h3>
-                Сэкономят время на создании рутинных и отчетных презентаций; не требуют от сотрудиков навыков дизайна и верстки.</li>
-            <li>
-                <h3>Питчи для инвесторов</h3>
-                Цель питча — заинтересовать инвестора и привлечь финансирование. Подготавливается максимально конкретизированная и сжатая презентация.</li>
-            <li><h3>Аутсорс всех презентационных задач</h3>
-                Возьмем на себя подготовку всех презентационных и печатных материалов. Вы ставите задачи, мы выполняем их день в день</li>
-        </ul>
+        <div class="prod">
+            <ul>
+                <li class="left">
+                    <div>
+                    <h3>Презентации для чтения и выступлений</h3>
+                    <p>Пригодятся для онлайн-продаж, рассылок, встреч с клиентами и партнерами, отчетов и выступлений на конференциях</p>
+                    </div>
+                    <img src="images/product.png">
+
+                </li>
+                <li class="right">
+                    <img src="images/product.png">
+                    <div>
+                    <h3>Корпоративные шаблоны</h3>
+                    <p>Сэкономят время на создании рутинных и отчетных презентаций; не требуют от сотрудиков навыков дизайна и верстки</p>
+                    </div>
+                </li>
+                <li class="left">
+                    <div>
+                    <h3>Питчи для инвесторов</h3>
+                    <p>Цель питча — заинтересовать инвестора и привлечь финансирование. Подготавливается максимально конкретизированная и сжатая презентация</p>
+                    </div>
+                    <img src="images/product.png">
+                </li>
+                <li class="right">
+                    <img src="images/product.png">
+                    <div>
+                    <h3>Аутсорс всех презентационных задач</h3>
+                    <p>Возьмем на себя подготовку всех презентационных и печатных материалов. Вы ставите задачи, мы выполняем их день в день</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
 
 
@@ -78,50 +73,22 @@
 
     <div class="about" id="wrk">
         <p>РАБОТЫ</p>
-        <!--<div id="dws-slider" class="carousel slide" data-ride="carousel">-->
-            <!--&lt;!&ndash;Показатели&ndash;&gt;-->
-            <!--<ol class="carousel-indicators">-->
-                <!--<li data-target="#dws-slider" data-slide-to="0" class="active"></li>-->
-                <!--<li data-target="#dws-slider" data-slide-to="1"></li>-->
-                <!--<li data-target="#dws-slider" data-slide-to="2"></li>-->
-            <!--</ol>-->
 
-            <!--&lt;!&ndash;Обертка для слайдов&ndash;&gt;-->
-            <!--<div class="carousel-inner" role="listbox">-->
-                <!--<div class="item active"><img src="https://dwstroy.ru/lessons/les3649/demo/img/slider-1.jpg" alt="Картинка 1">-->
-                    <!--<div class="carousel-caption">-->
-                        <!--<h3 class="text-uppercase">Адаптивный слайдер</h3>-->
-                        <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet elit lorem, ac congue mi-->
-                            <!--eleifend sit amet. Sed dignissim viverra neque a tristique.</p>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="item"><img src="https://dwstroy.ru/lessons/les3649/demo/img/slider-2.jpg" alt="Картинка 2">-->
-                    <!--<div class="carousel-caption">-->
-                        <!--<h3 class="text-uppercase">Анимированная прокрутка</h3>-->
-                        <!--<p>Aenean cursus imperdiet erat sit amet facilisis. Phasellus congue, sem in consectetur accumsan,-->
-                            <!--tellus risus sollicitudin mauris, quis ornare libero magna eget ex.</p>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="item"><img src="https://dwstroy.ru/lessons/les3649/demo/img/slider-3.jpg" alt="Картинка 3">-->
-                    <!--<div class="carousel-caption">-->
-                        <!--<h3 class="text-uppercase">Простая установка</h3>-->
-                        <!--<p>Praesent dictum, orci eget eleifend auctor, urna ex dapibus odio, vitae pretium neque massa vel-->
-                            <!--neque. Donec et interdum diam. Morbi dignissim vestibulum mi ac viverra.</p>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
+        <div id="slider">
+            <a href="#" class="control_next">>></a>
+            <a href="#" class="control_prev"><</a>
+            <ul>
+                <li>SLIDE 1</li>
+                <li style="background: #aaa;">SLIDE 2</li>
+                <li>SLIDE 3</li>
+                <li style="background: #aaa;">SLIDE 4</li>
+            </ul>
+        </div>
 
-            <!--&lt;!&ndash;Элементы управления&ndash;&gt;-->
-            <!--<a class="left carousel-control" href="#dws-slider" role="button" data-slide="prev">-->
-                <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
-                <!--<span class="sr-only">Previous</span>-->
-            <!--</a>-->
-            <!--<a class="right carousel-control" href="#dws-slider" role="button" data-slide="next">-->
-                <!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
-                <!--<span class="sr-only">Next</span>-->
-            <!--</a>-->
-        <!--</div>-->
-
+        <div class="slider_option">
+            <input type="checkbox" id="checkbox">
+            <label for="checkbox">Autoplay Slider</label>
+        </div>
     </div>
 
     <div class="parallax parall2" data-parallax="scroll" data-image-src="images/par-2.jpg">
@@ -147,7 +114,7 @@
             <li>+7 (915) 158-29-79</li>
             <li>Москва</li>
         </ul>
-        <p>PrezArt ©   2018</p>
+        <p>PresArt ©   2018</p>
     </div>
 
 
@@ -156,7 +123,6 @@
     <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="js/scroll.js"></script>
-    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
     <script src="js/slider.js"></script>
 
 </body>
