--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PRESART</title>
     <link rel="stylesheet" href="../src/sass/main.css">
-    <link rel='stylesheet' href="../src/sass/slider.css">
     <link rel='stylesheet' href="../src/sass/fm.revealator.jquery.css">
     <link rel='stylesheet' href='dist/style.css'>
 </head>
@@ -27,9 +26,8 @@
     </div>
 
     <div class="parallax banner" data-parallax="scroll" data-image-src="../src/images/par-1.jpg">
-            <img class="revealator-slidedown revealator-once revealator-duration15" src="../src/images/logo.png" height="40%">
-            <p class="revealator-slidedown revealator-once revealator-duration15">PRES<br>ART</p>
-            <p class="arrow revealator-slidedown revealator-once revealator-duration15">↓</p>
+            <p class="label revealator-slidedown revealator-once revealator-duration15">PRES<br>ART</p>
+            <p class="arrow">↓</p>
     </div>
 
     <div class="hallo" id="abt">
@@ -73,29 +71,13 @@
     </div>
 
 
-    <div class="parallax parall1" data-parallax="scroll" data-image-src="../src/images/par-3.jpg"></div>
+    <div class="parallax parall1" data-parallax="scroll" data-image-src="../src/images/par-2.jpg"></div>
 
     <div class="about" id="wrk">
         <p>РАБОТЫ</p>
-
-        <!--<div id="slider">-->
-            <!--<a href="#" class="control_next">>></a>-->
-            <!--<a href="#" class="control_prev"><</a>-->
-            <!--<ul>-->
-                <!--<li>SLIDE 1</li>-->
-                <!--<li style="background: #aaa;">SLIDE 2</li>-->
-                <!--<li>SLIDE 3</li>-->
-                <!--<li style="background: #aaa;">SLIDE 4</li>-->
-            <!--</ul>-->
-        <!--</div>-->
-
-        <!--<div class="slider_option">-->
-            <!--<input type="checkbox" id="checkbox">-->
-            <!--<label for="checkbox">Autoplay Slider</label>-->
-        <!--</div>-->
     </div>
 
-    <div class="parallax parall2" data-parallax="scroll" data-image-src="../src/images/par-2.jpg">
+    <div class="parallax parall2" data-parallax="scroll" data-image-src="../src/images/par-3.jpg">
 
     </div>
 
@@ -125,9 +107,6 @@
 
 
     <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
-    <!--<script src="js/parallax.min.js"></script>-->
-    <!--<script src="js/scroll.js"></script>-->
-    <!--<script src="js/slider.js"></script>-->
     <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
 
 </body>
